--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: BangersFont;
+    src: url(bangers-v20-latin-regular.woff);
+}
+
+@font-face {
+    font-family: PoppinsRegular;
+    src: url(Poppins-Regular.ttf);
+}
+
 html,
 body,
 #root
@@ -8,6 +18,8 @@ body,
     width: 100%;
     height: 100%;
     background: ivory;
+
+    font-family: PoppinsRegular, Arial;
 }
 
 canvas
